Anpassung Beschreibung und Ergänzung Predefined Typ inkl offenen ToDos

--- a/Panel.extension/MyTab.tab/IFC.panel/bundle.yaml
+++ b/Panel.extension/MyTab.tab/IFC.panel/bundle.yaml
@@ -1,9 +1,9 @@
 layout:
-  - SetUpIFCProjectParameter
   - ImportIDS 
   - SetNewIfcParameter
-  - StartIDSTesting
+  - StartIDSValidation
   - GetRequirements
+  - GetbSDDClass
   - ExportIFC
   
   
